[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Themes/lexend_menu_regular_text.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/lexend_menu_title.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/User_Interface/Menus/Simple_Hud/Simple_Hud.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/Relaxing_Delayed.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Themes/lexend_menu_large_text.tres" type="Theme" id=5]

[node name="Simple_Hud" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.793701
margin_right = 0.793701
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_display" type="Control" parent="."]
margin_left = 16.9514
margin_top = 983.182
margin_right = 133.951
margin_bottom = 1023.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_round" type="Label" parent="round_display"]
margin_left = 5.243
margin_right = 78.243
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Wave:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_round_number" type="Label" parent="round_display"]
margin_left = 85.243
margin_right = 158.243
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_display" type="Control" parent="."]
margin_left = 1800.31
margin_top = 0.981773
margin_right = 1917.31
margin_bottom = 40.9798
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fps" type="Label" parent="fps_display"]
margin_left = 5.243
margin_right = 78.243
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fps_number" type="Label" parent="fps_display"]
margin_left = 59.9844
margin_right = 136.984
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zombies_left_display" type="Control" parent="."]
margin_left = 8.58891
margin_top = 1030.69
margin_right = 123.589
margin_bottom = 1065.69
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_zombies_left" type="Label" parent="zombies_left_display"]
margin_left = 5.243
margin_right = 78.243
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Zombies Left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_zombies_left_number" type="Label" parent="zombies_left_display"]
margin_left = 173.244
margin_right = 246.244
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_display" type="Control" parent="."]
margin_left = 441.564
margin_top = 1030.74
margin_right = 639.564
margin_bottom = 1065.74
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_health" type="Label" parent="health_display"]
margin_left = 5.243
margin_right = 78.243
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_health_number" type="Label" parent="health_display"]
margin_left = 93.567
margin_right = 166.567
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamina_display" type="Control" parent="."]
margin_left = 1350.28
margin_top = 1030.74
margin_right = 1548.28
margin_bottom = 1065.74
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_stamina" type="Label" parent="stamina_display"]
margin_left = -17.9203
margin_right = 85.0797
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Stamina:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_stamina_number" type="Label" parent="stamina_display"]
margin_left = 93.567
margin_right = 166.567
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poll_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="points_display" type="Control" parent="."]
margin_left = 1658.67
margin_top = 858.438
margin_right = 1916.67
margin_bottom = 898.438
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_points" type="Label" parent="points_display"]
margin_right = 78.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_points_number" type="Label" parent="points_display"]
margin_left = 85.0
margin_right = 252.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_display" type="Control" parent="."]
margin_left = 1667.0
margin_top = 949.0
margin_right = 1915.0
margin_bottom = 1075.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_total_ammo" type="Label" parent="ammo_display"]
margin_right = 82.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Ammo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_total_ammo_number" type="Label" parent="ammo_display"]
margin_left = 88.0
margin_right = 249.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_clip" type="Label" parent="ammo_display"]
margin_top = 32.0
margin_right = 78.0
margin_bottom = 62.0
theme = ExtResource( 1 )
text = "Clip:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_clip_number" type="Label" parent="ammo_display"]
margin_left = 60.0
margin_top = 32.0
margin_right = 249.0
margin_bottom = 62.0
theme = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound_Relaxing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="interaction_display" type="RichTextLabel" parent="."]
margin_left = 762.0
margin_top = 850.0
margin_right = 1304.0
margin_bottom = 998.0
theme = ExtResource( 5 )
text = "Press (E) To Interact"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Control" parent="."]
margin_left = 560.0
margin_top = 240.0
margin_right = 1360.0
margin_bottom = 840.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="pause_menu"]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.317647, 0.317647, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_menu_title" type="Label" parent="pause_menu"]
margin_left = 183.526
margin_top = 46.1664
margin_right = 561.526
margin_bottom = 126.166
theme = ExtResource( 2 )
text = "Pause Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit_to_main_menu" type="Button" parent="pause_menu"]
margin_left = 289.069
margin_top = 420.158
margin_right = 516.069
margin_bottom = 456.158
rect_pivot_offset = Vector2( 133.975, -168.951 )
theme = ExtResource( 1 )
text = "Exit To Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_continue" type="Button" parent="pause_menu"]
margin_left = 317.839
margin_top = 173.752
margin_right = 452.839
margin_bottom = 209.752
rect_pivot_offset = Vector2( 133.975, -168.951 )
theme = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_settings" type="Button" parent="pause_menu"]
visible = false
margin_left = 425.489
margin_top = 293.839
margin_right = 560.489
margin_bottom = 329.839
rect_pivot_offset = Vector2( 133.975, -168.951 )
theme = ExtResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="poll_timer" to="." method="_on_poll_timer_timeout"]
[connection signal="pressed" from="pause_menu/btn_exit_to_main_menu" to="." method="_on_btn_exit_to_main_menu_pressed"]
[connection signal="pressed" from="pause_menu/btn_continue" to="." method="_on_btn_continue_pressed"]
